chore: migrate from k8s.gcr.io to registry.k8s.io
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/guestbook/guestbook.yaml
+++ b/guestbook/guestbook.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: guestbook
-        image: 'k8s.gcr.io/guestbook:v3'
+        image: 'registry.k8s.io/guestbook:v3'
         env:
         - name: "VERSION"
           value: "v1"
