--- a/guestbook/redis.yaml
+++ b/guestbook/redis.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: redis-master
-        image: 'k8s.gcr.io/redis:e2e'
+        image: 'registry.k8s.io/redis:e2e'
         ports:
         - name: redis-server
           containerPort: 6379
@@ -60,7 +60,7 @@ spec:
     spec:
       containers:
       - name: redis-slave
-        image: 'k8s.gcr.io/redis-slave:v2'
+        image: 'registry.k8s.io/redis-slave:v2'
         ports:
         - name: redis-server
           containerPort: 6379
