--- a/gitops-demo/echo-server.yaml
+++ b/gitops-demo/echo-server.yaml
@@ -32,7 +32,7 @@ spec:
               fieldRef:
                 fieldPath: status.podIP
           - name: NODE_NAME
-            value: version2
+            value: failed
           image: cilium/echoserver:latest
           imagePullPolicy: Always
           resources:
